kube/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nick-space
  labels:
    name: nick-space
