kube/deployment-a.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    nick-app-a: nick-app-a
  name: nick-app-a
  namespace: nick-space
spec:
  replicas: 3
  selector:
    matchLabels:
      nick-app-a: nick-app-a
  template:
    metadata:
      labels:
        nick-app-a: nick-app-a
    spec:
      containers:
      - image: koa-app:v1
        name: nick-app-a
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  labels:
    nick-service-a: nick-service-a
  name: nick-service-a
  namespace: nick-space
spec:
  ports:
  - port: 3001
    protocol: TCP
    targetPort: 3000
  selector:
    nick-app-a: nick-app-a
  type: NodePort
