kube/deployment-b.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    nick-app-b: nick-app-b
  name: nick-app-b
  namespace: nick-space
spec:
  replicas: 3
  selector:
    matchLabels:
      nick-app-b: nick-app-b
  template:
    metadata:
      labels:
        nick-app-b: nick-app-b
    spec:
      volumes:
      - name: node-pv-storage
        persistentVolumeClaim:
          claimName: node-pv-claim
      containers:
      - image: koa-app:v1
        name: nick-app-b
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: "/home/node/app/static"
          name: node-pv-storage
---

apiVersion: v1
kind: Service
metadata:
  labels:
    nick-service-b: nick-service-b
  name: nick-service-b
  namespace: nick-space
spec:
  ports:
  - port: 3002
    protocol: TCP
    targetPort: 3000
  selector:
    nick-app-b: nick-app-b
  type: NodePort
