kube/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    nick-app: nick-app
  name: nick-app
  namespace: nick-space
spec:
  replicas: 3
  selector:
    matchLabels:
      nick-app: nick-app
  template:
    metadata:
      labels:
        nick-app: nick-app
    spec:
      containers:
      - image: koa-app:v1
        name: nick-app
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  labels:
    nick-service: nick-service
  name: nick-service
  namespace: nick-space
spec:
  ports:
  - port: 3001
    protocol: TCP
    targetPort: 3000
  selector:
    nick-app: nick-app
  type: NodePort
