kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nick-ingress
  namespace: nick-space
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /testapp
        backend:
          serviceName: nick-service
          servicePort: 3001
